--- a/index.html
+++ b/index.html
@@ -681,5 +681,6 @@
 
   <!-- Load Google Maps JS + Places (CH) -->
   <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDxiPfbUuLimnZa7MePEtAltu83ZDUugPs&libraries=places&region=CH&language=en&callback=initMaps"></script>
+  <script src="site-patch.js"></script>
 </body>
 </html>
